--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ index.php
 wp-admin/
 wp-includes/
 wp-content/plugins/
+!wp-content/plugins/ebicla-custom-plugin
+!wp-content/plugins/notifications-plugin
