--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,11 @@
+#ignore
 wp-config.php
 .htaccess
 index.php
 wp-admin/
 wp-includes/
-wp-content/plugins/
-!wp-content/plugins/ebicla-custom-plugin
-!wp-content/plugins/notifications-plugin
+wp-content/plugins/*
+
+#except 
+!wp-content/plugins/ebicla-custom-plugin/
+!wp-content/plugins/notifications-plugin/
